# Traderm

./: README.md
.gemini/antigravity/: implementation_plan.md  task.md
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/src/: lib.rs
server/: Cargo.toml
server/src/: broadcaster.rs  main.rs  models.rs
web/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  test_fromXDR.js  test_prepare.js
web/contracts/: Cargo.toml
web/contracts/src/: lib.rs
web/prisma/: schema.prisma
web/public/: full_payout_data.xlsx
web/server/src/: binance.rs
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/signin/: route.ts
web/src/app/api/auth/signout/: route.ts
web/src/app/api/auth/signup/: route.ts
web/src/app/api/settle/: route.ts
web/src/app/terminal/: page.tsx
web/src/components/: Leaderboard.tsx  MarketStatsBar.tsx  SignOutButton.tsx  TradePanel.tsx  TradingChart.tsx  WalletConnect.tsx
web/src/lib/: auth.ts  prisma.ts  stellar-helper.ts  use-wallet.ts
web/src/lib/contract/: index.ts  wallet-connection.ts
